<resources>
    <string name="app_name">Biblioteca Livre</string>

    <!-- Menu -->
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_livro">Cadastrar Livro</string>
    <string name="action_update_livro">Atualizar Livro</string>
    <string name="action_description_livro">Descrição do Livro</string>

    <!-- Livro -->
    <string name="nome">Nome</string>
    <string name="ano">Ano</string>
    <string name="ISBN">ISBN</string>
    <string name="autor">Autor</string>
    <string name="categoria">Categoria</string>

    <string name="introduce_name">Digite o nome do Livro</string>
    <string name="introduce_ano">Digite o Ano</string>
    <string name="introduce_ISBN">Digite o ISBN</string>
    <string name="introduce_autor">Digite o nome do Autor</string>
    <string name="introduce_categoria">Digite a Categoria</string>

    <string name="create_livro">Cadastrar Livro</string>
    <string name="update_livro">Atualizar Livro</string>
    <string name="description_livro">Descrição do Livro</string>

    <!-- Cidade -->
    <string name="estado">Estado</string>
    <string name="description_cidade">Descrição da Cidade</string>

    <!-- Biblioteca -->
    <string name="description_biblioteca">Descrição da Biblioteca</string>

    <!-- Login -->
    <string name="mail">Mail</string>
    <string name="log_in">Log in</string>
    <string name="senha">Senha</string>
    <string name="reset_password">Recuperar Senha</string>
    <string name="reset_password_ok">Senha Recuperada, Verifique seu email!</string>
    <string name="create_account">Criar Conta</string>
    <string name="forgot_password">Esqueceu sua Senha?</string>
    <string name="error_empty_fields">Por favor, preencha todos os campos!</string>
    <string name="error_incorrect_data_login">Dados incorretos!</string>

    <!-- Create Account -->
    <string name="introduce_name_a">Digite o seu nome</string>
    <string name="introduce_login">Digite o seu login</string>
    <string name="introduce_mail">Digite o seu email</string>
    <string name="introduce_mail_reset_password">Digite o seu email</string>
    <string name="new_password">Nova senha</string>
    <string name="tv_repeat_password">Repita a senha</string>
    <string name="repeat_password">Repita sua senha</string>
    <string name="error_password_not_match">As senhas não correspondem</string>
    <string name="registration_completed">Conta criada com sucesso!</string>

    <!-- Spinners -->
    <string-array name="states_array">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

</resources>
